# swipe-jukebox

./: README.md  export_playlist.py  jukebox.py  pyproject.toml  songs.txt  spotifyd.conf
