[tool.poetry]
name = "swipe-jukebox"
version = "0.1.0"
description = ""
authors = ["Mark Meredith <mwm126@proton.me>"]
readme = "README.md"
packages = [{include = "swipe_jukebox"}]

[tool.poetry.dependencies]
python = "^3.11"
spotipy = "^2.22.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
